<resources>
    <string name="app_name">tas3</string>
    <string name="Line5"> \u2022 Extended range with long-distance Flex Radio</string>
    <string name="Line4"> \u2022 Automatic, hyperlocal scheduled adjustments with Weather Intelligence Plus</string>
    <string name="Line3"> \u2022 Guided scheduled setup creates tailored,accurate scheduled</string>
    <string name="Line2"> \u2022 Precise remote control with run,pause,skip or quick run</string>
    <string name="Line1"> \u2022 Works with favourite smart home devices,platforms Radio</string>
    <string name= "line6">hi how are you \n &amp;#8226 welcome to stackoverflow </string>
</resources>